# bb_epaper

./: CMakeLists.txt  LICENSE  README.md  library.properties
Fonts/: Roboto_Thin_10.h  Roboto_Thin_16.h  Roboto_Thin_24.h  Roboto_Thin_40.h
ch32v/: ch32v_io.inl
ch32v/epaper_demo/: epaper_demo.launch  epaper_demo.wvproj
ch32v/epaper_demo/Debug/: debug.c
ch32v/epaper_demo/User/: Roboto_Black_40r.h  main.c  system_ch32v00x.c
esp_idf/: c6_ulp_io.inl  esp_generic.inl  esp_idf_io.inl  esp_main_io.inl  s3_ulp_io.inl
esp_idf/Spectra6/: CMakeLists.txt  sdkconfig  sdkconfig.old
esp_idf/Spectra6/main/: CMakeLists.txt  Roboto_Black_40.h  Spectra6.cpp
esp_idf/hello_world_c/: CMakeLists.txt  sdkconfig.old
esp_idf/hello_world_c/main/: CMakeLists.txt  hello_world.c
esp_idf/hello_world_cpp/: CMakeLists.txt  sdkconfig
esp_idf/hello_world_cpp/main/: CMakeLists.txt  hello_world_cpp.cpp
esp_idf/mini_epaper_s3/: CMakeLists.txt  sdkconfig
esp_idf/mini_epaper_s3/main/: CMakeLists.txt  mini_epaper_s3.c
examples/CO2_EPD_Clock/: CO2_EPD_Clock.ino  Roboto_Black_30.h  Roboto_Black_50.h
examples/atmega_clock/: Roboto_Black_78.h  atmega_clock.ino
examples/badger2040_life/: badger2040_life.ino
examples/e1004_test/: e1004_test.ino  platformio.ini
examples/epd_panel_tester/: bart_47x128.h  epd_panel_tester.ino
examples/font_drawing/: Roboto_Black_40.h  font_drawing.ino
examples/four_color/: four_color.ino  smiley_hearts.h
examples/function_test/: Roboto_Thin_48.h  function_test.ino
examples/g5_mini_epaper/: bart.h  bart_80x128.h  g5_mini_epaper.ino
examples/g5_oled/: g5_oled.ino
examples/gray_test/: gray_test.ino
examples/images_and_icons/: bart.h  bomb.h  images_and_icons.ino  smiley.h
examples/inkplate_6color_test/: inkplate_6color_test.ino
examples/partial_update/: partial_update.ino
examples/spectra6_demo/: spectra6_demo.ino
examples/sticky_clock/: Roboto_Black_140.h  sticky_clock.ino
examples/three_color/: smiley_bwr.h  three_color.ino
examples/web_image_compressor/: bin_to_c.cpp  web_image_compressor.ino
examples/x4_clock/: Roboto_Black_40.h  x4_clock.ino
fontconvert/: fontconvert.c  main.c
imageconvert/: Makefile  README.md  README.txt  main.c  make_png_convert  png_main.cpp
macos/: Makefile
rpi/: Makefile  README.txt  rpi_io.inl
rpi/examples/cli_tool/: Makefile  main.c
rpi/examples/compressed_font/: Makefile  Roboto_Black_40.bbf  Roboto_Black_40.h  main.cpp
rpi/examples/hello_epaper/: Makefile  main.cpp
rpi/examples/partial_update_clock/: Makefile  main.cpp  (+1 more)
rpi_pico/: pico_io.inl
rpi_pico/epaper_example/: CMakeLists.txt  epaper_example.c
src/: Group5.cpp  Group5.h  arduino_io.inl  bb_ei.inl  bb_ei_gfx.inl  bb_ei_io.inl  bb_eink.cpp  bb_eink.h  bb_ep.inl  bb_ep_gfx.inl  bb_epaper.cpp  bb_epaper.h  bb_font.h  esphome_io.h  esphome_io.inl  g5dec.inl  g5enc.inl  mem_io.inl  rpi_io.inl
(+18 files in other folders)
